--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -43,10 +43,30 @@
     --transt-05: all 0.5s ease;
     --15526kf: #31373D;
     --ge4i3v: #FFFFFF;
+    --1n7ksai: #ffffff;
+    --tt26x0: rgba(95,105,117,.8);
+    --664oo8: #f5f6fa;
+    --whdmoy: #31373d;
+    --awt1w7: rgba(245,246,250,.4);
+    --157d7l0: #F6F7FA;
+    --5ajn2k: #F1F3F7;
+    --15e1b1i: rgba(95,105,117,.3);
+    --1mpgd1v: #f6f7fa;
+    --1m9vfxv: rgba(0,0,0,.2);
 
 }
 
 .darken {
+    --1n7ksai: #31343c;
+    --tt26x0: rgba(153,164,176,.8);
+    --664oo8: rgba(30,32,36,.4);
+    --whdmoy: #f5f6f7;
+    --awt1w7: rgba(30,32,36,.2);
+    --157d7l0: #1E2024;
+    --5ajn2k: #3C404A;
+    --15e1b1i: #24282b;
+    --1mpgd1v: #24282b;
+    --1m9vfxv: rgba(0,0,0,.5);
     --r49o3w: #99a4b0;
     --144un3c: #24262b;
     --7h9g04: #17181b;
@@ -239,7 +259,135 @@ img.common-left-img.mobile {
     display: flex;
     
 }
+.wallte-title{
+    color: var(--title-color);
+    width: 50%;
+    text-align: left;
+    padding-left: 50px;
+    line-height: 64px;
+    font-size: 17px;
+    font-weight: 500;
 
+}
+.wallet-action{
+    text-align: right;
+    width: 50%;
+    line-height: 64px;
+    padding-right: 50px;
+}
+.wallet.open {
+    opacity: 1; /* Fully visible */
+    visibility: visible; /* Make visible */
+    transform: none; /* Reset transform */
+    transition-delay: 0s, 0s, 0s; /* Apply visibility transition without delay */
+  }
+.balance-bg{
+    background-color: var(--background-color);
+    padding: 12px 20px !important;
+    border-radius: var(--border-radius);
+}
+.wallet-header{
+    height: 64px;
+    background-color: var(--standard-color);
+    top: 0;
+    display: flex;
+}
+.wallet{
+   
+    position: fixed !important;
+    background: var(--background-color);
+    z-index: 100;
+    height: 100vh;
+    overflow: scroll;
+    opacity: 0; /* Start fully transparent */
+    visibility: hidden; /* Not visible initially */
+    transition: opacity var(--transt-01), transform var(--transt-01), visibility 0s var(--transt-01);
+    transform: translateX(100%);
+  
+   
+}
+.wallet-body{
+    display: flex;
+  
+   padding: 50px;
+}
+.wallet-nav{
+    width: 25%;
+    background: var(--1n7ksai) !important;
+    border-radius: var(--border-radius);
+    padding: 30px 0;
+    height: fit-content;
+}
+.wallet-nav .nav{
+    border: none;
+    display: block;
+    text-align: left;
+    padding: 10px;
+}
+.wallet-nav .nav .nav-link.active{
+    color: var(--title-color) !important;
+    background: var(--664oo8) ;
+    border: none;
+    border-radius: var(--border-radius);
+}
+.wallet-nav .nav .nav-link{
+    padding-left: 30px;
+}
+.icon-bdt{
+    width: 25px;
+}
+.payment-methods{
+    display: flex;
+    align-items: center;
+}
+.payment-method img{
+    width: 100px;
+    border-radius: var(--border-radius);
+    
+}
+.table-bordered>:not(caption)>*{
+    border: none;
+}
+.form-control{
+    background-color: var(--664oo8);
+    color: var(--text-color);
+    border: none;
+}
+.form-control:focus{
+    background-color: var(--664oo8);
+    outline: none;
+}
+.form-control::placeholder{
+    color: var(--text-color);
+}
+.table>:not(caption)>*>*{
+    background-color: var(--664oo8);
+    border: none;
+    color: var(--text-color);
+}
+.input-group-text{
+    background: var(--664oo8);
+    border: none;
+    color: var(--text-color);
+    outline: none;
+}
+.payment-method {
+    background: var(--background-color);
+    margin: 10px;
+    align-items: center;
+    border-radius: var(--border-radius);
+}
+.wallet-content{
+    width: 70%;
+    background: var(--1n7ksai) !important;
+    margin-left: 5%;
+    border-radius: var(--border-radius);
+    height: auto;
+    height: fit-content;
+    text-align: left;
+    padding: 20px;
+    
+}
 .aside.close{
     width: 64px;
     transition: var(--transt-05);
