--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -140,8 +140,8 @@ img.common-left-img.mobile {
         margin-bottom: 60px;
     }
    
-    .seen{
-        display: block;
+    .top-nav .seen{
+        display: none;
     }
       .payment_bg{
         display: none !important;
@@ -298,9 +298,57 @@ img.common-left-img.mobile {
     bottom: 0;
     visibility: visible !important;
     background: var(--background-color);
-    z-index: 100;
+    box-shadow:  0.2rem 0.5rem #0002;
+    z-index: 1;
+    height: 3.75rem;
+    line-height: 3.75rem;
+    padding: 0 10px;
         }
+    .bottom-menu li{
+        margin: 0 !important;
+        
+    }
+    .press-button{
+        
+            height: 60px;
+            width: 60px;
+            background: var(--background-color);
+            border-radius: 100%;
+            top: revert-layer;
+            margin-top: -15px;
+            line-height: 50px;
+            align-items: center;
+            text-align: center;
+            display: flex;
+            
+        
+    }
+    .press-button-effet{
+        background: var(--placeholder-color);
+        border-radius: 100%;
+        height: 40px;
+        width: 40px;
+        line-height: 40px;
+        margin: auto;
+        
+        
+    }
+    .bottom-menu .nav-item {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+    .bottom-menu .nav-item{
+        display: flex;
+        
+    }
+    .nav-action{
+        display: none;
+    }
   }
+.fa-wallet{
+    color: var(--text-color) !important;
+}
 .bottom-action{
     display: flex;
     
@@ -590,6 +638,7 @@ img.common-left-img.mobile {
     z-index: 100;
     height: 64px;
 }
+
 .top-menu .nav-link:hover {
     background: var(--1ru4f9r);
 }
