--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -884,6 +884,10 @@ img.common-left-img.mobile {
     padding: 0 5px 0 0;
     -webkit-background-clip: text;
 }
+iframe{
+    width: 100%;
+    height: 100vh;
+}
 
 .aside.close ~ .home-big-banner{
     top: 0px !important;
