--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -579,6 +579,18 @@ img.common-left-img.mobile {
 .aside-nav{
     background-color: var(--standard-color);
     margin: 15px;
+    
+}
+.aside-nav {
+    overflow: auto; /* Use auto to show scrollbar only when necessary */
+    max-height: 83%; /* Example fixed height; adjust as needed */
+    scrollbar-width: none; /* Hide scrollbar for Firefox */
+    -ms-overflow-style: none;  /* Hide scrollbar for IE and Edge */
+}
+
+/* Hide scrollbar for Webkit (Chrome, Safari) */
+.aside-nav::-webkit-scrollbar {
+    display: none;
 }
 .aside.close .aside-nav .nav-item{
     background-color: var(--background-color);
