--- a/src/App.css
+++ b/src/App.css
@@ -4666,14 +4666,12 @@
 }
 
 .social-links{
-  /* display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(0.25rem, 1fr)); */
 display: flex;
 
 }
 
  .socile{
   height: 16px !important;
-width: 16px !important;
-display: block;
+  width: 16px !important;
+aspect-ratio: 1 !important;
 }
