--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -9829,9 +9829,19 @@ body.chat-open .intercom-dfosxs {
 
 .fdn9ps2 .coins-list {
     display: grid;
-    grid-gap: 0;
-    grid-template-columns: repeat(auto-fill,77px);
-    margin: 8px -18px 0
+    align-items: center;
+    gap: 0.5rem;
+    grid-template-columns: repeat(auto-fill, 6rem);
+    margin: 0.5rem -18px 0 0;
+
+    & img{
+        width: 5.5rem;
+        object-fit: cover;
+    }
+    & img.tap{
+        margin: auto;
+        width: 3rem;
+    }
 }
 
 .fdn9ps2 .coins-list .fd-ci {
