--- a/src/assets/css/Casino.css
+++ b/src/assets/css/Casino.css
@@ -112,7 +112,7 @@ a {
   text-align: center;
   margin-top: 3rem;
   padding-left: 2rem;
-  margin-left: 1rem;
+  margin-inline: auto;
   overflow-x: scroll;
   flex-wrap: nowrap;
   position: relative;
